--- a/cluster1/package.json
+++ b/cluster1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cluster1",
+  "name": "blog_project",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "lodash": "^4.17.21",
+    "mongoose": "^7.0.3"
   }
 }
